--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,11 @@ html {
 
 }
 
-
-
 body {
   margin: 0;
-  font-family: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
-  color: #444;
-  background: #022c43;
+  font: 300 11px/1.4 'Helvetica Neue', sans-serif;
+  color: #EDF3EB;
+  background: #2F3437;
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
