--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -41,9 +41,10 @@
         }
 
         img {
-            margin-left: 20px;
+            margin-left: 25px;
+            margin-bottom: 0-5px;
             opacity: 0;
-            width: 32px;
+            width: 64px;
             height: auto;
             animation: rotateIn 1s linear both;
             animation-delay: 1.4s;
@@ -53,8 +54,8 @@
     h2 {
         color: #8d8d8d;
         margin-top: 20px;
-        font-weight: 400;
-        font-size: 11px;
+        font-weight: 600;
+        font-size: 16px;
         font-family: sans-serif;
         letter-spacing: 3px;
         animation: fadeIn 1s 1.8s backwards;
