completed home page with animation!

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -10,7 +10,7 @@
 
     h1{
         color: #EDF3EB;
-        font-size: 56px;
+        font-size: 48px;
         line-height: 53px;
         margin: 0;
         font-family: 'Coolvetica';
@@ -44,7 +44,7 @@
             margin-left: 25px;
             margin-bottom: 0-5px;
             opacity: 0;
-            width: 64px;
+            width: 48px;
             height: auto;
             animation: rotateIn 1s linear both;
             animation-delay: 1.4s;
@@ -52,12 +52,12 @@
     }
 
     h2 {
-        color: #8d8d8d;
+        color: #FFF;
         margin-top: 20px;
-        font-weight: 600;
+        font-weight: 500;
         font-size: 16px;
         font-family: sans-serif;
-        letter-spacing: 3px;
+        letter-spacing: 1px;
         animation: fadeIn 1s 1.8s backwards;
     }
 
