--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,6 +1,6 @@
 .nav-bar {
     background: #181818;
-    width: 60px;
+    width: 80px;
     height: 100%;
     position: absolute;
     top: 0;
@@ -18,7 +18,7 @@
                 height: auto;
 
                 &.sub-logo {
-                    width: 65px;
+                    width: 75px;
                 }
             }
         }
@@ -71,19 +71,19 @@
 
             &:first-child {
                 &::after{
-                    content: 'Home';
+                    content: 'HOME';
                 }
             }
         }
         a.about-link {
             &:after{
-                content: 'About Me';
+                content: 'ABOUT ME';
             }
         }
 
         a.contact-link {
             &:after{
-                content: 'Contact';
+                content: 'CONTACT';
             }
         }
         a.active {
