--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   font: 300 11px/1.4 'Helvetica Neue', sans-serif;
   color: #EDF3EB;
-  background: #2F3437;
+  background: #EDF3EB;
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
