--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -5,7 +5,7 @@
     
     position: absolute;
     top: 0;
-    right: 15%;
+    right: 18%;
     bottom: 1;
     left: auto;
     margin: auto;
@@ -36,7 +36,7 @@
 .svg-container {
 
     opacity: 1;
-    stroke: #72b183;
+    stroke: #0E7B6C;
     stroke-width: 10;
 
 }
