--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -37,3 +37,17 @@
     animation: fadeIn 1s forwards;
     animation-delay: 1s;
 }
+
+.about-page{
+    .text-zone{
+        position: absolute;
+        left: 10%;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 35%;
+        vertical-align: middle;
+        display: table-cell;
+        max-height: 90%;
+        
+    }
+}
