--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
 body {
   margin: 0;
   font: 300 11px/1.4 'Helvetica Neue', sans-serif;
-  color: #EDF3EB;
+  color: #000;
   background: #EDF3EB;
   overflow: hidden;
   display: block;
