--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -41,13 +41,74 @@
 .about-page{
     .text-zone{
         position: absolute;
-        left: 10%;
+        left: 20%;
         top: 50%;
         transform: translateY(-50%);
         width: 35%;
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
+
+        h1{
+            font-size: 53px;
+            font-weight: 400;
+            font-family: 'Coolvetica';
+            color: #458262; 
+            margin-top: 0;
+            position: relative;
+            margin-bottom: 40px;
+            left: 10px;
+
+            &::before{
+                content: '<h1>';
+                font-family: 'La Belle Aurore';
+                font-size: 18px;
+                position: absolute;
+                margin-top: -10px;
+                left: -10px;
+                opacity: 0.6;
+                line-height: 18px;
+            }
+
+            &::after{
+                content: '<h1/>';
+                font-family: 'La Belle Aurore';
+                font-size: 18px;
+                position: absolute;
+                margin-left: 20px;
+                left: -30px;
+                bottom:-20px;
+                opacity: 0.6;
+                line-height: 18px;
+            }
+        }
         
+        p {
+            font-size: 15px;
+            color: #000;
+            font-family: sans-serif;
+            font-weight: 400;
+            min-width: fit-content;
+            animation: pulse 1s;
+
+            &:nth-of-type(1){
+                animation-delay: 1.1s;
+            }
+            &:nth-of-type(2){
+                animation-delay: 1.2s;
+            }
+            &:nth-of-type(3){
+                animation-delay: 1.3s;
+            }
+
+        }
+    }
+
+    .text-animate-hover {
+        &:hover {
+            color:#000;
+            animation: pulse 1s;
+
+        }
     }
 }
